results/SVCOMP/4-shot/log-ExLazy-2024_03_18_16_36_35.txt
class Main {

    //@ requires x == null && y == 0;
    //@ ensures System.out.println(1);
    //@ also
    //@ requires x != null;
    //@ ensures System.out.println(2);
    //@ ensures \false;
    public static void test(Main x, int y) {
        if (x == null && y == 0) {
            System.out.println(1);
        } else if (x != null) {
            System.out.println(2);
            assert false;
        }
    }

    //@ requires n1 == 0;
    //@ ensures test(null, 0);
    //@ also
    //@ requires n1 != 0;
    //@ ensures test(null, n2);
    public static void f(int n1, int n2) {
        if (n1 == 0) test(null, 0);
        else test(null, n2);
    }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:8: error: This backslash token is unknown: \false
    //@ ensures \false;
                ^
1 error

